# amortized-eb

./: LICENSE  README.md
Results/NormalMeans/: mse_crimes_B200.csv  mse_results_table.csv  results_bayesball.csv
Results/NormalMeans-JohnstoneSilverman/: mse_crimes_B500.csv  mse_results_table.csv
Results/NormalMeans-Rice/: results_images.csv  results_rice.csv  results_telescope.csv
code/: NM-EfronMorris.py  NM-asymprisk.py  NM-cancer.py  NM-communitycrime.py  NM-rice.py  NM-risk.py  NM-simulated.py  NMhetero.py  NormalMeans.py  modeling_util.py  pyproject.toml  susie.R
data/: Pitching2005.csv  crime-label-description.rtf  final_losses.pkl
